scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/ok/forkjoin.yf
---
name: forkjoin
graphs:
  start:
    - type: ForkJoinNode
      forkTargets: [A,B]
      targetToKeys:
        A: { keyfroma: keyfroma }
        B: { keyfromb: keyfromb }

    - type: StringContainsNode
      regex: ""
      content: "{keyfroma}" # content :: String

  A:
    - type: EchoNode
      put: keyfroma
      value: "1"

  B:
    - type: EchoNode
      put: keyfromb
      value: "1"


