scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/fail/mapjoin3.yf
---
name: mapjoin
graphs:
  start:
    - type: MapJoinNode
      list: [A,B]
      mapTarget: X
      keys:
        key: key

    - type: StringContainsNode
      regex: ""
      content: "{{keyfromx}}[0]" # content :: String

  X:
    - type: EchoNode
      put: key
      value: "1"


